        o 'lhoat'         : -) when 'normalise=TRUE' the 'ParameterSets' output is now given in the real range of each parameter, and not in the 
                               normalised range [0, 1] as up to version 0.3.2. The 'lhoat-gof.txt' output file has always been written in the real 
                               range of each parameter when 'normalise=TRUE'. Thanks to Romain Lardy !
        o 'wquantile'     : -) fixed error: 'Error en setTxtProgressBar(pbar, i) : objeto 'pbar' no encontrado', which was triggered when 'verbose=FALSE'.
                               Thanks to Antonio Piccolboni !


0.3-3	04-Jun-2013
        o 'hydroPSO'      : fixed error introduced (not intentionally, of course !) in version 0.3-2:
                            Error in FUN(1:number[[1L]], ...) : 
                              unused arguments (Particles = ...)
        o 'pest2hydroPSO' : -) typos fixed in the (automatically created) 'hydroPSO-Rscript.R' file (Thanks to Ramadan Abdel A. !):
                                *) line 38: ending comma removed
                                   out.FUN="read_output"   
                                *) line 57: added ending ', sep=""', to avoid white spaces in the filename
                                   obs.fname <- paste(model.drty, "/PSO.in/", obs.fname, sep="")  
                            -) file 'ParamFiles.txt' (automatically created) uses the correct row number for each input file.
                               Up to hydroPSO <= 0.3-2 the row number for each parameter had a shift of 1 line (e.g., it used '5' when the correct 
                               number was 4)
        o NAMESPACE: functions 'read.ParameterRanges' and 'rLHS' are now exported        

0.3-2	29-May-2013
        o 'lhoat'         : -) parallel capable
                            -) much faster than in previous hydroPSO versions, even without using the new 'parallel' option (this functions was 